--- a/src/styles.less
+++ b/src/styles.less
@@ -1,8 +1,56 @@
 html {
   height: 100vh;
-
 }
 
 body {
   background-color: black;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.timer-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.timer {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 180px;
+  margin: 20px;
+}
+
+.value-block {
+  border: 1px solid rgba(128, 128, 128, 0.425);
+  border-radius: 10px;
+  height: 230px;
+  font-size: 120px;
+  font-weight: 100;
+  color: rgba(245, 245, 245, 0.685);
+  background-color: rgba(128, 128, 128, 0.247);
+  padding-bottom: 10px;
+}
+
+.name-block {
+  color: rgba(255, 166, 0, 0.562);
+  font-size: 20px;
+}
+
+.timer-block-separator {
+  color: rgba(245, 245, 245, 0.685);
+  font-size: 50px;
+  font-weight: 100;
+  margin-bottom: 40px;
 }
