--- a/src/app/features/timer/components/timer-block/timer-block.component.html
+++ b/src/app/features/timer/components/timer-block/timer-block.component.html
@@ -1,2 +1,2 @@
-<div>{{ value | number: '2.0-0'}}</div>
-<div>{{ name }}</div>
+<div class="block value-block"><label>{{ value | number: '2.0-0'}}</label></div>
+<div class="block name-block"><label>{{ name }}</label></div>
