--- a/src/styles.less
+++ b/src/styles.less
@@ -54,3 +54,25 @@ body {
   font-weight: 100;
   margin-bottom: 40px;
 }
+
+@media (max-width: 900px) {
+  .block {
+    width: 45px;
+    margin: 5px;
+  }
+
+  .value-block {
+    height: 60px;
+    font-size: 35px;
+    padding-bottom: 5px;
+  }
+
+  .name-block {
+    font-size: 8px;
+  }
+
+  .timer-block-separator {
+    margin-bottom: 25px;
+    font-size: 20px;
+  }
+}
