--- a/src/styles.less
+++ b/src/styles.less
@@ -24,55 +24,48 @@ body {
   height: 100%;
 }
 
+.block-container {
+  display: flex;
+
+}
+
+@blockHeight: min(25vw, 230px);
+@fontSize: min(10vw, 100px);
+
 .block {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 180px;
-  margin: 20px;
+  width: min(20vw, 180px);
 }
 
 .value-block {
   border: 1px solid rgba(128, 128, 128, 0.425);
-  border-radius: 10px;
-  height: 230px;
-  font-size: 120px;
+  border-radius: min(2vw, 10px);
+  height: @blockHeight;
+  font-size: @fontSize;
   font-weight: 100;
   color: rgba(245, 245, 245, 0.685);
-  background-color: rgba(128, 128, 128, 0.247);
-  padding-bottom: 10px;
+  background-color: #80808041;
 }
 
 .name-block {
   color: rgba(255, 166, 0, 0.562);
-  font-size: 20px;
+  font-size: min(2vw, 20px);
+  margin-top: min(2vw, 15px);
 }
 
-.timer-block-separator {
+.separator-block {
   color: rgba(245, 245, 245, 0.685);
-  font-size: 50px;
+  font-size: @fontSize;
   font-weight: 100;
-  margin-bottom: 40px;
-}
 
-@media (max-width: 900px) {
-  .block {
-    width: 45px;
-    margin: 5px;
-  }
-
-  .value-block {
-    height: 60px;
-    font-size: 35px;
-    padding-bottom: 5px;
-  }
-
-  .name-block {
-    font-size: 8px;
-  }
-
-  .timer-block-separator {
-    margin-bottom: 25px;
-    font-size: 20px;
+  height: @blockHeight;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: min(5vw, 50px);
+  label {
+    margin-bottom: min(1.2vw, 15px);
   }
 }
