--- a/src/styles.less
+++ b/src/styles.less
@@ -30,7 +30,7 @@ body {
 }
 
 @blockHeight: min(25vw, 230px);
-@fontSize: min(10vw, 100px);
+@fontSize: min(12vw, 120px);
 
 .block {
   display: flex;
@@ -46,7 +46,7 @@ body {
   font-size: @fontSize;
   font-weight: 100;
   color: rgba(245, 245, 245, 0.685);
-  background-color: #80808041;
+  padding-bottom: min(2vw, 15px);
 }
 
 .name-block {
