--- a/src/styles.less
+++ b/src/styles.less
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300&display=swap');
+
 html {
   height: 100vh;
 }
 
 body {
   background-color: black;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Figtree', sans-serif;
+    ;
 }
 
 .timer-container {
@@ -46,7 +48,6 @@ body {
   font-size: @fontSize;
   font-weight: 100;
   color: rgba(245, 245, 245, 0.685);
-  padding-bottom: min(2vw, 15px);
 }
 
 .name-block {
